<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.lttrung.giuaky.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_room_info"
        android:name="com.lttrung.giuaky.ui.roominfo.RoomInfoFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_room_info" />

    <fragment
        android:id="@+id/navigation_user"
        android:name="com.lttrung.giuaky.ui.user.UserFragment"
        android:label="@string/title_user"
        tools:layout="@layout/fragment_user" />
    <fragment
        android:id="@+id/navigation_test"
        android:name="com.lttrung.giuaky.ui.test.TestFragment"
        android:label="fragment_test"
        tools:layout="@layout/fragment_test" />
</navigation>