<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/actions"
        android:textColor="@color/text_color"
        android:textSize="28sp"
        android:textStyle="bold" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_gray_border_16dp"
        android:padding="16dp">

        <ImageView
            android:id="@+id/img_register"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_home_black_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/primary_color" />

        <TextView
            android:id="@+id/title_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/text_color"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/img_register"
            app:layout_constraintTop_toTopOf="@+id/img_register" />

        <TextView
            android:id="@+id/description_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/lorem"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_register"
            app:layout_constraintTop_toBottomOf="@+id/title_register" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_arrow_forward_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description_register" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bills_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_gray_border_16dp"
        android:padding="16dp">

        <ImageView
            android:id="@+id/img_bills"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_home_black_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/primary_color" />

        <TextView
            android:id="@+id/title_bills"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bills"
            android:textColor="@color/text_color"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/img_bills"
            app:layout_constraintTop_toTopOf="@+id/img_bills" />

        <TextView
            android:id="@+id/description_bills"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/lorem"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_bills"
            app:layout_constraintTop_toBottomOf="@+id/title_bills" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_arrow_forward_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description_bills" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/expand_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_gray_border_16dp"
        android:padding="16dp">

        <ImageView
            android:id="@+id/img_expand"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_home_black_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/primary_color" />

        <TextView
            android:id="@+id/title_expand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expand"
            android:textColor="@color/text_color"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/img_expand"
            app:layout_constraintTop_toTopOf="@+id/img_expand" />

        <TextView
            android:id="@+id/description_expand"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/lorem"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_expand"
            app:layout_constraintTop_toBottomOf="@+id/title_expand" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_arrow_forward_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description_expand" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>